--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,7 +2,9 @@
     float:none;
     display: flex;
     justify-content: center;
-	padding: 3rem 2rem 4rem 2rem;
+	padding: 2rem 2rem 2rem 2rem;
+	background-image: url("../img/Textura_footer-12.svg");
+	background-size: contain;
 	//que si no ramble en tablet y mobile no queda apoyado
 	//margin-top: 2rem;
 }
