--- a/src/scss/content/_steps.scss
+++ b/src/scss/content/_steps.scss
@@ -1,7 +1,7 @@
 .steps{
     display: flex;
     width: 80%;
-    margin: 0 10% 0 10%;
+    margin: 0 4rem 2rem 4rem;
     flex-direction: column;
     justify-content: center;
 }
