--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,8 +2,8 @@
     float:none;
     display: flex;
     justify-content: center;
-	padding: 2rem 2rem 2rem 2rem;
-	background-image: url("../img/Textura_footer-12.svg");
+	padding: 3rem 2rem 2rem 2rem;
+	background-image: url("../img/footer.svg");
 	background-size: contain;
 	//que si no ramble en tablet y mobile no queda apoyado
 	//margin-top: 2rem;
