--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,16 +1,17 @@
 .header{
-    background-image: url("../img/bgMobile.svg");
+    display: flex;
+    //flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 100%;
+    background-image: url("../img/bgDesktop.svg");
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: top center;
-    width: auto;
-    height: auto;
-    //margin: 0 10% 0 10%;
-    display: flex;
-    flex-direction: column;
-    //justify-content: center;
-
+    
     /*MEDIA QUERIES*/
     /*Tablet*/
     @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -25,21 +26,21 @@
 
 .slogan{
     max-width: 70%;
-    margin: 120% auto 10% auto;
+    margin: 40% auto 0 auto;
     margin-left: auto;
     margin-right: auto;
     
     /*MEDIA QUERIES*/
     /*Tablet*/
     @media screen and (min-width: 768px) and (max-width: 1023px) {
-        max-width: 80%;
-        margin: 63% auto 30% auto;
+        max-width: 40%;
+        margin: 40% auto 0 6%;
     }
 
     /*Desktop*/
     @media screen and (min-width: 1024px){
-        max-width: 50%;
-        margin: 70% auto 30% auto;
+        max-width: 39%;
+        margin: 38% auto 0 6%;
     }
 }
 
