--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -22,13 +22,13 @@
 	}
 
 	&-slogan{
-		margin: 2rem 0 3rem 0;
+		margin: 2% 0 10% 0;
 		font-size: 1.5rem;
 
 		/*MEDIA QUERIES*/
     	/*Tablet*/
     	@media screen and (min-width: 768px) and (max-width: 1023px) {
-      	  
+      	  margin: 2rem 0 3rem 0;
     	}
 
    		/*Desktop*/
