--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,8 +5,8 @@
     align-items: center;
     justify-content: center;
     width: auto;
-    height: 100%;
-    background-image: url("../img/bgDesktop.svg");
+    height: auto;
+    background-image: url("../img/bgMobile.svg");
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -26,7 +26,7 @@
 
 .slogan{
     max-width: 70%;
-    margin: 40% auto 0 auto;
+    margin: 90% auto auto auto;
     margin-left: auto;
     margin-right: auto;
     
@@ -44,7 +44,25 @@
     }
 }
 
-/*.div-empty{
-    height: 620px;
-    float: none;
-}*/
+.logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 70%;
+    height: auto;
+    margin-top: 10%;
+
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        display: none;
+    }
+
+    /*Desktop*/
+    @media screen and (min-width: 1024px){
+        display: none;
+    }
+}
+
+
