--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -53,13 +53,19 @@ h1{
     font-weight: 700;
 }
 .t-h1{
-    font-size: 1.75rem;
-    line-height: 2rem;
-    
+    font-size: 1.5rem;
+    line-height: 1.7rem;
+
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        font-size: 1.75rem;
+        line-height: 2rem;
+    }
     /*Desktop*/
     @media screen and (min-width: 1024px){
         font-size: 2.5rem;
-        line-height: 2.2rem;   
+        line-height: 2.7rem;   
     }
 }
 
