--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -14,31 +14,31 @@
     
     /*MEDIA QUERIES*/
     /*Tablet*/
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1023px){
         background-image: url("../img/bgTablet.svg");
     }
 
     /*Desktop*/
-    @media screen and (min-width: 1024px){
+    @media only screen and (min-device-width: 1024px){
         background-image: url("../img/bgDesktop.svg");    
     }
 }
 
 .slogan{
     max-width: 70%;
-    margin: 90% auto auto auto;
+    margin: 80% auto auto auto;
     margin-left: auto;
     margin-right: auto;
     
     /*MEDIA QUERIES*/
     /*Tablet*/
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1023px){
         max-width: 40%;
         margin: 40% auto 0 6%;
     }
 
     /*Desktop*/
-    @media screen and (min-width: 1024px){
+    @media only screen and (min-device-width: 1024px){
         max-width: 39%;
         margin: 38% auto 0 6%;
     }
@@ -51,16 +51,16 @@
     justify-content: center;
     max-width: 70%;
     height: auto;
-    margin-top: 10%;
+    margin-top: 25%;
 
     /*MEDIA QUERIES*/
     /*Tablet*/
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1023px){
         display: none;
     }
 
     /*Desktop*/
-    @media screen and (min-width: 1024px){
+    @media only screen and (min-device-width: 1024px){
         display: none;
     }
 }
