--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,9 +1,4 @@
 body {
-    /*background-image: url("../img/bgMobile.svg");
-    background-size: contain; 
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: top center;*/
     font-size: 16px; 
     line-height: 1.5rem;
     font-family: 'Montserrat', sans-serif;    
@@ -13,17 +8,6 @@ body {
     max-width:100%;  
     height: auto;
     min-width: 320px;
-
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-        //background-image: url("../img/bgTablet.svg");
-    }
-
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-        //background-image: url("../img/bgDesktop.svg");    
-    }
 }
 
 a{
@@ -53,17 +37,18 @@ h1{
     font-weight: 700;
 }
 .t-h1{
-    font-size: 1.5rem;
-    line-height: 1.7rem;
+    //font-size: 1.75rem;
+    //line-height: 2rem;
+    font-size: 2.5rem;
+    line-height: 2.7rem;
 
     /*MEDIA QUERIES*/
     /*Tablet*/
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-        font-size: 1.75rem;
-        line-height: 2rem;
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1023px){
+        
     }
     /*Desktop*/
-    @media screen and (min-width: 1024px){
+    @media only screen and (min-device-width: 1024px){
         font-size: 2.5rem;
         line-height: 2.7rem;   
     }
