--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -24,6 +24,7 @@ $secondaryColorBgGreen1: #73d980;
 $secondaryColorBgGreen2: #1b6425;
 $secondaryColorBgBlue1: #89ecf5;
 $secondaryColorBgBlue2: #0a6d76;
+$secondaryColorBgBlue3: #0097e8;
 $secondaryColorBgPink1: #ff67a7;
 $secondaryColorBgPink2: #d93560;
 $secondaryColorBgYellow1: #ffdb4d;
