--- a/src/scss/content/_steps.scss
+++ b/src/scss/content/_steps.scss
@@ -1,9 +1,19 @@
 .steps{
     display: flex;
-    width: 80%;
-    margin: 0 4rem 2rem 4rem;
+    width: 90%;
+    margin: 0 auto 2rem auto;
     flex-direction: column;
     justify-content: center;
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+        
+    }
+
+    /*Desktop*/
+    @media screen and (min-width: 1024px){
+        width: 80%;
+    }
 }
 
 .step{
