--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'settings';
 @import 'typography';
 @import 'header';
+@import 'content/clearfix';
 @import 'colors/color-background';
 @import 'colors/color-text';
 @import 'content/generic';
