--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -5,7 +5,7 @@
 	padding: 3rem 2rem 1rem 2rem;
 	background-image: url("../img/footer.svg");
 	background-size: contain;
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     
     /*MEDIA QUERIES*/
     /*Tablet*/
