--- a/src/scss/content/_generic.scss
+++ b/src/scss/content/_generic.scss
@@ -27,23 +27,12 @@
 }
 .content-global{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
-.content2{
-    display:none;
-    
-    /*MEDIA QUERIES*/
-    /*Tablet*/
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-    }
 
-    /*Desktop*/
-    @media only screen and (min-width: 1024px){
-      display: inline-block;
-      margin-left: auto;
-      margin-right: auto;
-      flex-direction: row;
-    }
+.content-global-1, .content-global-2{
+    display: flex;
+    flex-direction: row;
 }
 
 .center{
