--- a/src/scss/content/_images.scss
+++ b/src/scss/content/_images.scss
@@ -32,46 +32,39 @@
     }
 }
 
-/*circulo pasos*/
-#circle {
-	width: 1rem;
-	height: 1rem;
-	-moz-border-radius: 50px;
-	-webkit-border-radius: 50px;
-	border-radius: 50px;
-	padding: 1rem 1rem 1rem 1rem;
-    
-    /*position: relative;
-    overflow: hidden;*/
-    float:left;
-   
-}
-
-/*circulo pasos*/
-.mini-circle{
-	width: 2rem;
-	height: 2rem;
-	-moz-border-radius: 50px;
-	-webkit-border-radius: 50px;
-	border-radius: 50px;
-	padding: 1em 1em 1em 1em;
+/*.puzzle::after{
+     width: 2rem;
+    height: 2rem;
+    border-radius: 50px;
+    padding: 1em 1em 1em 1em;
     margin: 0 3rem 0 0;
     float: right;
+}*/
+
+.mini-circle {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50px;
+    padding: 1em 1em 1em 1em;
+    margin: 0 0 0 3rem;
+    float: right;
+    position: absolute;
 }
 
 .img-content2{
 	/*Desktop*/
 	@media only screen and (min-width: 1024px){
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 100%;
         margin-top: 0;
-        margin-bottom: 20%;
-        background-image: url(../img/imgKids2.png);
+        
+        /*background-image: url(../img/imgKids2.png);
         background-repeat: no-repeat;
         background-size: cover;
-        //position: absolute;
-        background-attachment: inherit;
-        flexbox-direction:row;
+        background-position: -10% 0;
+        position: absolute;*/
+        //background-attachment: inherit;
+        //flexbox-direction:row;
     }
 }
 .img-content3{
@@ -83,4 +76,20 @@
     }
 }
 
+.steps-img{
+    display:none;
+    
+    /*MEDIA QUERIES*/
+    /*Tablet*/
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+    }
+
+    /*Desktop*/
+    @media only screen and (min-width: 1024px){
+      display: inline-block;
+      margin-left: auto;
+      margin-right: auto;
+      //flex-direction: row;
+    }
+}
 
