--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'colors/color-text';
 @import 'content/generic';
 @import 'content/images';
+@import 'content/about';
 @import 'content/steps';
 @import 'buttons';
 @import 'form';
