--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,5 @@
 .header{
     display: flex;
-    //flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -13,6 +12,7 @@
     background-position: top center;
     
     /*MEDIA QUERIES*/
+
     /*Tablet*/
     @media only screen and (min-width: 768px) and (max-width: 1023px){
         background-image: url("../img/bgTablet.svg");
@@ -25,8 +25,9 @@
 }
 
 .slogan{
-    max-width: 60%;
-    margin: 85% auto auto auto;
+    max-width: 100%;
+    padding: 0.2rem;
+    margin: 70% auto auto auto;
     margin-left: auto;
     margin-right: auto;
     
@@ -34,13 +35,13 @@
     /*Tablet*/
     @media only screen and (min-width: 768px) and (max-width: 1023px){
         max-width: 40%;
-        margin: 40% auto 0 6%;
+        margin: 30% auto 0 6%;
     }
 
     /*Desktop*/
     @media only screen and (min-width: 1024px){
         max-width: 39%;
-        margin: 38% auto 0 6%;
+        margin: 32% auto 0 6%;
     }
 }
 
