ready for structure review

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -99,4 +99,9 @@ h6{
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
-
+.txt-center{
+    text-align: center;
+}
+.txt-margin{
+    margin: 1rem;
+}
