--- a/src/scss/colors/_color-background.scss
+++ b/src/scss/colors/_color-background.scss
@@ -34,7 +34,9 @@
 .color-bg-blue-lgt{
     background-color: $secondaryColorBgBlue1;
 }
-
+.color-bg-blue-bg{
+    background-color: $secondaryColorBgBlue4;
+}
 .color-bg-pink{
     background-color: $primaryColorBgPink;
 }
