--- a/src/scss/content/_images.scss
+++ b/src/scss/content/_images.scss
@@ -58,6 +58,24 @@
     background-color:grey;
     border-color:3px solid #ffffff;
 }
+
+.placeholder-squ-img{
+    margin:auto;
+    padding-top:1rem;
+    height: 250px;
+    width: 250px;
+    background-color:grey;
+    border-color:3px solid #ffffff;
+}
+.placeholder-anim-img{
+    margin:auto;
+    padding-top:1rem;
+    height: 250px;
+    width: 320px;
+    background-color:grey;
+    border-color:3px solid #ffffff;
+    align-self: flex-end;
+}
 .mini-circle {
     width: 2rem;
     height: 2rem;
