--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -7,6 +7,7 @@
 .btn{
 	&-act, &-slogan {
 		display:inline-block;
+		margin-left:12px;
 		margin-bottom: 12px;
 		box-shadow:$colorShadowBtn 0px 3px 3px;
 		border: 5px solid $primaryColorWhite;
@@ -159,5 +160,7 @@
 		width: 2rem;
 	}
 }
-
+.btn-center{
+	margin:auto;
+}
 
