--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -25,6 +25,7 @@ $secondaryColorBgGreen2: #1b6425;
 $secondaryColorBgBlue1: #89ecf5;
 $secondaryColorBgBlue2: #0a6d76;
 $secondaryColorBgBlue3: #0097e8;
+$secondaryColorBgBlue4: #85c2ff;
 $secondaryColorBgPink1: #ff67a7;
 $secondaryColorBgPink2: #d93560;
 $secondaryColorBgYellow1: #ffdb4d;
