--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -7,17 +7,17 @@
 .btn{
 	&-act, &-slogan {
 		display:inline-block;
-		margin-left:12px;
-		margin-bottom: 12px;
+		margin-left:1rem;
+		margin-bottom: 1rem;
 		box-shadow:$colorShadowBtn 0px 3px 3px;
 		border: 5px solid $primaryColorWhite;
 		color:$primaryColorWhite;
 		font-weight: 400;
 		text-decoration: none;
 		background-color: $secondaryColorBgBlue3;
-		font-size: 1rem;
+		font-size: 1.25rem;
 		border-radius: 10px;
-		padding: 1rem;
+		padding: 2.5rem;
 		transition: all 0.3s ease 0s;
 	}
 
@@ -39,7 +39,7 @@
 	}
 
 	&-act:hover, &-slogan:hover{
-		background-color: $secondaryColorBgBlue3;
+		background-color: $primaryColorBgGreen;
 		box-shadow:$colorShadowBtn 0px 1px 1px;
 		cursor: pointer;
 	}
