--- a/src/scss/content/_generic.scss
+++ b/src/scss/content/_generic.scss
@@ -28,45 +28,93 @@
     flex-wrap: wrap;
 }
 
-
-.content-global{
+.container{
+    width: 100%;
+    background-image: url("../img/back.svg");    
+}
+.container-flex{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
-    padding-top:5rem;
-    border:1px dotted red;
+    width: 90%;
+    padding-top:2rem;
+    padding-bottom:1rem;
+    text-align: center;
+    margin:auto;
 }
 
-.content-global-1, .content-global-2{
+.content-flex-1, .content-flex-2{
+    display:flex;
     flex:1;
     flex-direction: column;
-    padding-bottom:2rem;
+    padding:0rem 0 2rem 0rem;
+    justify-content: flex-end;
+    text-align: center;
+    margin: 0.25rem 0.25rem 0rem 0;
+}
+
+.max-min{
+    min-width: 300px;
+    max-width: 400px;
+}
+
+
+.content-flex-3{
+    display:flex;
+    flex:1;
+    flex-direction: column;
+    padding:0rem 0rem 2rem 0rem;
+    justify-content: flex-end;
+    text-align: center;
+    margin: 0rem 1rem 7rem 1rem;
+}
+
+.content-flex-4{
+    display:flex;
+    flex:1;
+    flex-direction: column;
+    padding:0rem 0 2rem 0rem;
+    justify-content: flex-end;
+    text-align: center;
+    margin: 0.25rem 0.25rem 0rem 0;
+}
+.content-flex-btn{
+    width:auto;
+    align-self:center;
+    margin: 1rem;
 
 }
 
 .flex-align-center{
-        align-self:center;
-
+    align-self:center;
+}
+.f-basis-5{
+    flex-basis:500px;
 }
 .f-basis-4{
     flex-basis:400px;
 }
-
+.f-basis-3{
+    flex-basis:300px;
+}
 .f-basis-2{
     flex-basis:200px;
 }
-
 .flex-content-center{
     align-self:center;
     justify-content: center;
 }
+.content-bottom{
+    align-self:center;
+    justify-content: flex-end;
+}
+.he{height:500px;}
 
 //Caja contenedora
 .content-rnd-top{
     margin:auto;
-    padding:1rem;
-    width:90%;
+    padding:0rem;
+    width:95%;
     background-color:$primaryColorBgPink;
     border-top-left-radius:1rem;
     border-top-right-radius:1rem;
@@ -74,22 +122,21 @@
     border-bottom-right-radius:0rem;
     border:1px solid $secondaryColorBgPink2;
     text-align:center;
-    padding:2rem 0 2rem 0;
     box-shadow:$colorShadowBtn 0px 1px 1px;
 }
 .content-rnd-bottom{
     margin:auto;
-    padding:1rem;
-    width:90%;
+    padding:1rem 0rem 1rem 0rem;
+    width:95%;
     background-color:$primaryColorWhite;
     border-top-left-radius:0rem;
     border-top-right-radius:0rem;
     border-bottom-left-radius:1rem;
     border-bottom-right-radius:1rem;
     text-align:center;
-    border:1px solid $secondaryColorBgBlack1;
-    padding-bottom:2rem;
-    box-shadow:$colorShadowBtn 0px 1px 1px;
+    //border:1px solid $secondaryColorBgBlack1;
+    padding: 1rem 1rem 3rem 1rem;
+    //box-shadow:$colorShadowBtn 0px 1px 1px;
 }
 
 .center{
@@ -120,7 +167,6 @@
 }
 .test-flex{
     flex-direction: row;
-    border:1px dashed green;
     display:flex;
     justify-content: center;
     align-self:center;
@@ -137,4 +183,20 @@
     align-self: center;
     justify-content: center;
     padding: 10px;
+}
+.label{
+    flex:1;
+    width:95%;
+    border-radius: 1rem;
+    height: auto;
+    background-color: #ffffff;
+    margin-bottom: -100px;
+    padding:2rem;
+    margin-left: 3%;
+    justify-content: flex-end;
+    box-shadow: $colorShadowBtn 0px 3px 3px;
+}
+hr{
+    border:1px dotted $secondaryColorBgPink2;
+    margin: 1rem;
 }
