--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -38,17 +38,17 @@
 	&-slogan {
 		display:inline-block;
 		align-items: flex-start;
-		margin-bottom: 1rem;
+		margin-top: 1rem;
 		box-shadow:$colorShadowBtn 0px 3px 3px;
 		border: 5px solid $primaryColorWhite;
 		color:$primaryColorWhite;
 		font-weight: 700;
 		text-decoration: none;
 		background-color: $secondaryColorBgBlue3;
-		font-size: 1.5rem;
+		font-size: 2rem;
 		line-height: 2.25rem;
 		border-radius: 10px;
-		padding: 1rem 1.3rem;
+		padding: 1rem;
 		transition: all 0.3s ease 0s;
 
 		/*MEDIA QUERIES*/
