--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -27,25 +27,27 @@
 .slogan{
     max-width: 100%;
     padding: 0rem;
-    margin: 43% auto auto auto;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20% auto auto auto;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom:20%;
     
     /*MEDIA QUERIES*/
     /*Tablet*/
     @media only screen and (min-width: 568px) and (max-width: 765px){
         max-width: 100%;
-        margin: 0%;
+        margin: 9% 3% 0% 0%;
+        margin-bottom:5%;
     }
     @media only screen and (min-width: 768px) and (max-width: 1023px){
         max-width: 40%;
-        margin: 55% auto 3% 10%;
+        margin: 60% auto 3% 10%;
     }
 
     /*Desktop*/
     @media only screen and (min-width: 1024px){
         max-width: 39%;
-        margin: 19% auto 3% 10%;
+        margin: 24% auto 3% 10%;
     }
 }
 
