fixing containe 3 Estucture

--- a/src/scss/content/_generic.scss
+++ b/src/scss/content/_generic.scss
@@ -60,7 +60,7 @@
     padding:0rem 0rem 2rem 0rem;
     justify-content: flex-end;
     text-align: center;
-    margin: 0rem 1rem 7rem 1rem;
+    margin: 0rem 0em 7rem 0rem;
     }
 
     &-flex-4{
